--- a/web3.html
+++ b/web3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>el titulo del post</title>
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="css1/estilio1.css">
 </head>
 <body>
     <h1>curso de git y github</h1>
