--- a/web3.html
+++ b/web3.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="css1/estilio1.css">
 </head>
 <body>
-    <h1>curso de git y github</h1>
+	<h1>cabecera</h1>
+    <h2>curso de git y github</h2>
     <p>caleses platzi</p>
      <p>estudiantes</p>
 </body>
