agregando contenido rama cabecera

--- a/web3.html
+++ b/web3.html
@@ -8,6 +8,6 @@
 	<h1>cabecera</h1>
     <h2>curso de git y github</h2>
     <p>caleses platzi</p>
-     <p>estudiantes</p>
+     <p>estudiantes aprendiendo de git y git hub</p>
 </body>
 </html>
