modifique cabecera y color

--- a/web3.html
+++ b/web3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>el titulo de la web3</title>
+	<title>el titulo de la web3 cabecera</title>
 	<link rel="stylesheet" type="text/css" href="css1/estilio1.css">
 </head>
 <body>
