modifique master y color rojo

--- a/web3.html
+++ b/web3.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>el titulo de la web3</title>
+	<title>el titulo de la web3 master</title>
 	<link rel="stylesheet" type="text/css" href="css1/estilio1.css">
 </head>
 <body>
-	<h1>cabecera</h1>
+	<h1>master</h1>
     <h2>curso de git y github</h2>
     <p>caleses platzi</p>
      <p>estudiantes aprendiendo de git y git hub</p>
