cambios de html rama cabecera

--- a/web3.html
+++ b/web3.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 
-	<title>el titulo de la web3 master</title>
+	<title>el titulo de la web3 cabecera</title>
 
 	<link rel="stylesheet" type="text/css" href="css1/estilio1.css">
 </head>
 <body>
-	<h1>master</h1>
+	<h1>Cabecera</h1>
     <h2>curso de git y github</h2>
     <p>caleses platzi</p>
      <p>estudiantes aprendiendo de git y git hub</p>
