--- a/web3.html
+++ b/web3.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css1/estilio1.css">
 </head>
 <body>
-	<h1>master</h1>
+	<h1>footer</h1>
     <h2>curso de git y github</h2>
     <p>caleses platzi</p>
      <p>estudiantes aprendiendo de git y git hub</p>
