--- a/web3.html
+++ b/web3.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-	<h1>footer</h1>
+	<h1>fix-top</h1>
 
-    <h2>curso de git y github</h2>
+    <h2>curso de git y github rama fix-tpo</h2>
     <p>caleses platzi</p>
      <p>estudiantes aprendiendo de git y git hub</p>
 </body>
