agregue imagen en html

--- a/web3.html
+++ b/web3.html
@@ -9,9 +9,9 @@
 <body>
 
 	<h1>fix-top</h1>
-
     <h2>curso de git y github rama fix-tpo</h2>
     <p>caleses platzi</p>
-     <p>estudiantes aprendiendo de git y git hub</p>
+    <p><img src="imagen/capture1.png"/></p>
+    <p>estudiantes aprendiendo de git y git hub</p>
 </body>
 </html>
